<resources>
    <string name="hello">Hello, HomeActivity!</string>
    <string name="app_name">WiRemote</string>
    <string name="current_renderer">选择播放设备</string>
    <string name="tab_local_media_indicator">本地媒体</string>
    <string name="tab_online_media_indicator">在线媒体</string>
    <string name="tab_remote_controller_indicator">Remote Controller</string>
    <string name="tab_device_management_indicator">设备</string>
    <string name="tab_more_indicator">More</string>
    <string name="scan_two_dimension_code">扫描二维码</string>
    <string name="devices_list">设备列表</string>
    <string name="scanning_devices">Searching device,please wait...</string>
    <string name="taost_text">"请点击扫描二维码按钮扫描TV界面的\n二维码进行自动配对"</string>
    <string name="not_link">未链接</string>
    <string name="link_service_faith">扫描失败!</string>
    <string name="login_title">输入用户名和密码</string>
    <string name="login_dialog_secondary_title">提示： 请仔细查看TV屏幕二维码下方提供的用户名和密码信息</string>
    <string name="login_ssid">SSID</string>
    <string name="login_code">Code</string>
    <string name="link">连接</string>
    <string name="cancel">取消</string>
    <string name="more_option_title">More</string>
    <string name="more_option_multiscreen_first">Share with different screens</string>
    <string name="more_option_multiscreen_second">多媒体多设备播放</string>
    <string name="more_option_setting_first">Settings</string>
    <string name="more_option_setting_second">Set relate information of Wiremote</string>
    <string name="more_option_gesture_first">Gesture guide</string>
    <string name="more_option_feedback">FeedBack</string>
    <string name="more_option_about">About</string>
    <string name="more_option_update_first">Check update</string>
    <string name="more_option_update_second">Version：1.2.1</string>
    <string name="more_option_exit">Exit</string>
    <string name="password_error_title">输入错误</string>
    <string name="password_error_toast">"SSID或者Code输入不正确"</string>
    <string name="re_link">重新连接</string>
    <string name="ashare_not_available">多屏分享不可用</string>
    <string name="ashare_need_root">手机需要Root权限</string>
    <string name="ashare_mirror">Mirror</string>
    <string name="stop_ashare_mirror">停止手机镜像</string>
    <string name="link_network">连接互联网</string>
    <string name="link_network_secondary">让%1$s访问到互联网</string>
    <string name="phone_image">手机镜像</string>
    <string name="phone_image_secondary">将手机屏幕上的内容镜像到%1$s上</string>
    <string name="OTA_update">OTA升级</string>
    <string name="OTA_update_secondary">对%1$s的版本进行升级</string>
    <string name="sleep">休眠</string>
    <string name="sleep_secondary">%1$s深度休眠状态</string>
    <string name="safity">安全</string>
    <string name="satity_secondary">设置%1$s的无线热点密码</string>
    <string name="modified_device_name">修改设备名称</string>
    <string name="modified_device_name_secondary">对%1$s进行重命名</string>
    <string name="setting_switch_on">打开</string>
    <string name="setting_switch_off">关闭</string>
    <string name="setting_use_notification_title">Icon displayed in notification bar</string>
    <string name="setting_title">Settings</string>
    <string name="setting_use_update_title">software update notification</string>
    <string name="setting_stop_when_call_title">Play paused when call coming</string>
    <string name="setting_use_local_service_title">Local media service</string>
    <string name="setting_use_local_service_summary">You can\'t use the local media function when closed</string>
    <string name="setting_find_local_service_title">Allow the local media not to be discovered</string>
    <string name="setting_local_service_name_title">Modify the local media service name</string>
    <string name="setting_local_service_name_default">not setted</string>
    <string name="setting_use_notification_key">settingUseNotification</string>
    <string name="setting_use_update_key">settingUseUpdate</string>
    <string name="setting_stop_when_call">settingStopWhenCall</string>
    <string name="setting_use_local_service">settingUseLocalService</string>
    <string name="setting_find_local_service">settingFindLocalService</string>
    <string name="setting_local_service_name">settingLocalServiceName</string>
	<string name="remote_control_not_support">Hardware not support</string>
	<string name="remote_control_tip_touch">The blue dashed area can be touched</string>
	<string name="remote_control_tip_mouse">Please shake your phone to choose content and click OK botton to opreation</string>
	<string name="remote_control_tip_game1">Touch Screen status for games</string>
	<string name="remote_control_tip_game2">Click Back botton to return to other controller status</string>
	<string name="remote_control_title_touch">Touch pad</string>
	<string name="remote_control_title_mouse">Air mouse</string>
	<string name="remote_control_title_game">Touch screen</string>
	<string name="remote_control_title_tran">Tranditional remote</string>
    <string name="gesture_guide_tip1">Move cursor to realize location</string>
    <string name="gesture_guide_tip2">Click to open APP of current area</string>
    <string name="gesture_guide_tip3">Drag with two fingers to realize switch screens</string>
    <string name="gesture_guide_tip4">Long press can enter into the edit status</string>
    <string name="feedback_title">Feedback</string>
    <string name="feedback_btn_right_top">submit</string>
    <string name="device_config_title_ap">Choose Internet Connection</string>
    <string name="device_config_title_tv">Device List</string>
    <string name="device_config_title_add">添加设备</string>
    <string name="device_config_title_local">本地连接</string>
    <string name="device_config_dlg_no_device">Not Found!</string>
    <string name="device_config_dlg_no_device_detail">No device found in current,please connect manually!</string>
    <string name="device_config_dlg_ok">OK</string>
    <string name="device_config_dlg_ssid_and_pwd_title">Input wifi code</string>
    <string name="device_config_dlg_tv_check_title">Check Internet connection</string>
    <string name="device_config_dlg_tv_check_content">Please check wifi connected information displayed on TV currently!</string>
    <string name="about_title">About</string>
    <string name="about_label_version">Version</string>
    <string name="about_label_channel">Channel Number</string>
    <string name="about_label_web">Offical website</string>
    <string name="tab_image">Photo</string>
    <string name="tab_music">Music</string>
    <string name="tab_video">Video</string>
    <string name="image_setting">Settings</string>
    <string name="image_no_image_text">No files</string>
    <string name="image_start_show_slide">开始播放幻灯片，间隔时间3秒</string>
    <string name="image_start_show_slide_before">开始播放幻灯片，间隔时间</string>
    <string name="image_start_show_slide_after">s</string>
    <string name="image_end_show_slide">结束播放幻灯片</string>
    <string name="image_first_number_toast_message">已是第一张照片</string>
    <string name="image_last_number_toast_message">已是最后一张照片</string>
    <string name="image_slide_time_title">幻灯片间隔时间</string>
    <string name="image_slide_time_default_value">3</string>
    <string name="image_slide_time_1_second">间隔 1 秒播放</string>
    <string name="image_slide_time_3_second">间隔 3 秒播放</string>
    <string name="image_slide_time_5_second">间隔 5 秒播放</string>
    <string name="image_slide_time_10_second">间隔 10 秒播放</string>
    <string name="image_post_time_title">推送间隔时间</string>
    <string name="image_post_time_default_value">500</string>
    <string name="image_post_time_0_millisecond">立即推送</string>
    <string name="image_post_time_100_millisecond">间隔 100 毫秒推送</string>
    <string name="image_post_time_200_millisecond">间隔 200 毫秒推送</string>
    <string name="image_post_time_300_millisecond">间隔 300 毫秒推送</string>
    <string name="image_post_time_400_millisecond">间隔 400 毫秒推送</string>
    <string name="image_post_time_500_millisecond">间隔 500 毫秒推送</string>
    <string name="image_post_time_800_millisecond">间隔 800 毫秒推送</string>
    <string name="image_post_time_1000_millisecond">间隔 1000 毫秒推送</string>
    <string name="image_rotate_angle_title">旋转角度</string>
    <string name="image_rotate_angle_default_value">90</string>
    <string name="image_rotate_angle_30">每次旋转 30 度</string>
    <string name="image_rotate_angle_45">每次旋转 45 度</string>
    <string name="image_rotate_angle_90">每次旋转 90 度</string>
    <string name="local_media_image_progress_dialog_message">正在获取图片数据 ，请稍候...</string>
    <string name="local_media_video_progress_dialog_message">正在获取视频数据 ，请稍候...</string>
    <string name="video_prompt_prev_message">正在</string>
    <string name="video_prompt_next_message">上播放</string>
    <string name="video_play_end_prompt_message">播放结束</string>
    <string name="video_stop_prompt_message">停止播放</string>
    <string name="video_time_seekbar_text">00:00:00</string>
    <string name="video_not_connection_toast_message">未连接设备</string>
    <string name="video_push_progress_dialog_message">正在分享本地视频 ，请稍候...</string>
    <string name="video_first_number_toast_message">已经是第一个视频</string>
    <string name="video_last_number_toast_message">已经是最后一个视频</string>
    <string name="button_ok">OK</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
    <string name="result_text">找到纯文本</string>
    <string name="msg_default_status">如果扫描未成功，请返回进入设备列表手动配对</string>
    <string name="msg_ssid_label">SSID: </string>
    <string name="msg_code_label">Code: </string>
    <string name="msg_scan_result_title">扫描信息: </string>
    <string name="msg_scan_result_text">AP网络用户名和密码相关信息</string>
    <string name="title_dimensional_code">二维码扫描</string>
    <string name="description_wifi_connect">2dCode</string>
    <string name="description_goback">Go back</string>
    <string name="description_2dcode">2dCode</string>
    <string name="btn_wifi_connect">连接</string>
    <string name="btn_wifi_rescan">重新扫描</string>
    <string name="wifi_title">WIFI列表</string>
    <string name="wifi_connect_status_1">未访问至互联网</string>
    <string name="wifi_connect_status_2">已连接，不能访问互联网</string>
    <string name="wifi_scanning">正在扫描</string>
    <string name="wifi_scan_result">扫描结果：%1$d 条</string>
    <string name="soft_update_no">No Update</string>
    <string name="soft_update_title">Software Update</string>
    <string name="soft_update_info">Update Now?</string>
    <string name="soft_update_updatebtn">Update</string>
    <string name="soft_update_later">Cancel</string>
    <string name="soft_updating">Updating</string>
    <string name="soft_update_cancel">Cancel</string>
    <string name="soft_update_ignore">Ignore this version</string>
    <string name="bottom_tab_local_media">Local</string>
    <string name="bottom_tab_online_media">Online</string>
    <string name="bottom_tab_remote">Remote</string>
    <string name="bottom_tab_device_mana">Device</string>
    <string name="bottom_tab_more">More</string>
    <string name="your_options">edit your options</string>
    <string name="controler_select">Choose controller status</string>
    <string name="touch_pad">Touch pad</string>
    <string name="air_mouse">Air mouse</string>
    <string name="traditional_remote">Traditional remote</string>
    <string name="full_screen">Touch screen</string>
    <string name="music_data_not_init">wait for music date to be prepared</string>
    <string name="no_music_playing">Please select a song to play</string>
    <string name="defaule_time">00:00</string>
    <string name="lable_all_music">Songs</string>
    <string name="lable_album">Album</string>
    <string name="lable_artist">Artist</string>
    <string name="music_num">songs</string>
    <string name="no_song_playing">No songs Playing</string>
    <string name="no_artist_playing">No Artist</string>
</resources>