<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:switchpref="http://schemas.android.com/apk/res-auto" >

    <CheckBoxPreference
        android:key="@string/setting_use_notification_key"
        android:layout="@layout/preference_checkbox"
        android:title="@string/setting_use_notification_title"
        android:widgetLayout="@layout/custom_checkbox" />
    <CheckBoxPreference
        android:key="@string/setting_use_update_key"
        android:layout="@layout/preference_checkbox"
        android:title="@string/setting_use_update_title"
        android:widgetLayout="@layout/custom_checkbox" />
    <CheckBoxPreference
        android:key="@string/setting_stop_when_call"
        android:layout="@layout/preference_checkbox"
        android:title="@string/setting_stop_when_call_title"
        android:widgetLayout="@layout/custom_checkbox" />
    <CheckBoxPreference
        android:key="@string/setting_use_local_service"
        android:layout="@layout/preference_checkbox"
        android:title="@string/setting_use_local_service_title"
        android:summary="@string/setting_use_local_service_summary"
        android:widgetLayout="@layout/custom_checkbox" />
    <CheckBoxPreference
        android:dependency="@string/setting_use_local_service"
        android:key="@string/setting_find_local_service"
        android:layout="@layout/preference_checkbox"
        android:title="@string/setting_find_local_service_title" />

    <EditTextPreference
        android:defaultValue="@string/setting_local_service_name_default"
        android:key="@string/setting_local_service_name"
        android:layout="@layout/preference_edit"
        android:title="@string/setting_local_service_name_title"
        android:widgetLayout="@null" />

</PreferenceScreen>