<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="388px"
    android:layout_height="270px"
    android:background="#EBEFF3"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_toast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18.0px"
        android:layout_marginRight="11.0px"
        android:layout_marginTop="11px"
        android:layout_marginBottom="10px"
        android:textSize="20.0px"
        android:text="@string/login_dialog_secondary_title"
        android:textColor="#3083D9"/>

    <TableLayout
        android:id="@+id/loginFrom"
        android:orientation="vertical"
        android:layout_below="@id/dialog_toast"
        android:layout_alignRight="@id/dialog_toast"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginLeft="19.0px"
                android:paddingRight="10.0px"
                android:textSize="26px"
                android:text="@string/login_ssid"/>
            <TextView
                android:id="@+id/account"
                android:layout_width="26px"
                android:layout_height="47px"
                android:layout_marginLeft="15.0px"
                android:background="@drawable/input_box"/>

        </TableRow>

        <TableRow 
            android:layout_marginTop="15px">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="26px"
                android:layout_marginLeft="19.0px"
                android:text="@string/login_code"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="260px"
                android:layout_height="47px"
                android:layout_marginLeft="15.0px"
                android:background="@drawable/input_box"/>

        </TableRow>
        
    </TableLayout>

    <LinearLayout
        android:id="@+id/but_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginFrom"
        android:layout_marginTop="20px"
        android:gravity="center_horizontal"
        android:paddingBottom="10px">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="157px"
            android:layout_height="54px"
            android:text="@string/cancel"
            android:layout_marginLeft="0px"
            android:background="@drawable/login_btn_bg"/>
        <Button
            android:id="@+id/linkBtn"
            android:layout_width="157px"
            android:layout_height="54px"
            android:layout_marginLeft="17px"
            android:text="@string/link"
            android:background="@drawable/login_btn_bg"/>
        
    </LinearLayout>
</RelativeLayout>