<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/local_media_music"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


            <RelativeLayout
                android:id="@+id/upper_control"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/music_cd_bg"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="30dp" >

                    <TextView
                        android:id="@+id/music_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:shadowColor="#194A79"
                        android:shadowDx="5.0"
                        android:shadowDy="5.0"
                        android:shadowRadius="5.0"
                        android:singleLine="true"
                        android:ellipsize="marquee"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:text="@string/no_song_playing"
                        android:textColor="#dce1e8"
                        android:textSize="24dp" />

                    <TextView
                        android:id="@+id/music_artist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="8dp"
                        android:singleLine="true"
                        android:ellipsize="marquee"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:text="@string/no_artist_playing"
                        android:textColor="#214D78" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/play_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="#00000000"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:onClick="doClick"
                    android:src="@drawable/btn_music_big_play" />

            </RelativeLayout>

        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="-8dp"
            android:orientation="horizontal"
            android:layout_below="@+id/upper_control">
            
            <LinearLayout
                    android:id="@+id/allsongs_btn"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_music"
                    android:gravity="center"
                    android:clickable="true"
                    android:onClick="doClick" >


                    <TextView
                        android:id="@+id/allmusiccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/music_bth_music"
                        android:singleLine="true"
                        android:ellipsize="marquee"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:text="@string/lable_all_music"
                        android:textSize="18dp" />
                </LinearLayout>
                <ImageView 
                    android:contentDescription="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/music_bth_long_line"/>
                <LinearLayout
                    android:id="@+id/artist_btn"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_music"
                    android:gravity="center"
                    android:onClick="doClick"
                    android:orientation="vertical" >


                    <TextView
                        android:id="@+id/artistcount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/music_bth_singer_select"
                        android:ellipsize="marquee"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text="@string/lable_artist"
                        android:textSize="18dp"/>
                </LinearLayout>
                <ImageView 
                    android:contentDescription="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/music_bth_long_line"/>
                <LinearLayout
                    android:id="@+id/album_btn"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_music"
                    android:gravity="center"
                    android:onClick="doClick"
                    android:orientation="vertical" >


                    <TextView
                        android:id="@+id/albumcount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/music_bth_album_select"
                        android:ellipsize="marquee"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text="@string/lable_album"
                        android:textSize="18dp" />
                </LinearLayout>
                
        </LinearLayout>
    </RelativeLayout>